Fixed Scrollbar?

--- a/src/css/hnc_information.scss
+++ b/src/css/hnc_information.scss
@@ -99,15 +99,15 @@
     } */
   }
 }
-/* #hncCardContainer::-webkit-scrollbar {
-  -webkit-appearance: visible;
+#hncCardContainer::-webkit-scrollbar {
+  -webkit-appearance: none;
   width: 2px;
   height: 0px;
   box-shadow: inset 2px 2px 2px rgb(195, 255, 215);
   background-color: rgb(195, 196, 255);
 }
 #hncCardContainer::-webkit-scrollbar-thumb {
-  -webkit-appearance: visible;
+  -webkit-appearance: none;
   background-color: rgb(87, 255, 185);
   cursor: grab;
-} */
+}
